Fixes spacing issue, fixed height issue

--- a/media/theme/map-search.css
+++ b/media/theme/map-search.css
@@ -32,7 +32,6 @@
 
 #ms-search-layers {
     padding: 10px;
-    height: 500px;
     overflow: auto;
 }
 
